# RedBoard

./: README.md
config_tool/: README.md  redboard_config.py  requirements.txt
io_dll/: README.md  build32.bat  build64.bat  build_chuni.bat  build_fufubot.bat  meson.build
io_dll/src/aimeio/: aimeio.c  aimeio.def  aimeio.h  aimetest.c  meson.build
io_dll/src/chuniio/: chuniio.c  chuniio.def  chunitest.c  meson.build
io_dll/src/divaio/: divaio.c  divaio.def  divatest.c  meson.build
io_dll/src/utils/: config.c  config.h  hid_impl.c  hid_impl.h
